/*
 * GUARD the Bridge
 * Copyright (C) 2012  Matthew Finkel <Matthew.Finkel@gmail.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

option java_package = "edu.uconn.guarddogs.guardthebridge";

message PatronInfo {
  optional string name = 1;
  optional uint32 passangers = 2;
  optional string pickup = 3;
  optional string dropoff = 4;
  optional string phone = 5;
  optional string status = 6;
  optional string notes = 7;
  optional string timetaken = 8;
  optional string timeassigned = 9;
  optional string timedone = 10;
  optional int32 pid = 11;
}

message PatronList {
  repeated PatronInfo patron = 1;
}
